--- a/Web/appsettings.json
+++ b/Web/appsettings.json
@@ -8,6 +8,6 @@
     },
 "AllowedHosts": "*",
 "ConnectionStrings": {
-  "DefaultConnection": "Server=DESKTOP-I6E4SIH\\SQLEXPRESS;Database=Proyect;Trusted_Connection = True; MultipleActiveResultSets = true"
+  "DefaultConnection": "Server=DESKTOP-I6E4SIH\\SQLEXPRESS;Database=ProyectII;Trusted_Connection = True; MultipleActiveResultSets = true"
 }
 }
