--- a/Web/appsettings.json
+++ b/Web/appsettings.json
@@ -8,6 +8,10 @@
     },
 "AllowedHosts": "*",
 "ConnectionStrings": {
-  "DefaultConnection": "Server=DESKTOP-I6E4SIH\\SQLEXPRESS;Database=ProyectII;Trusted_Connection = True; MultipleActiveResultSets = true"
+  "DefaultConnection": "Server=DESKTOP-I6E4SIH\\SQLEXPRESS;Database=Proyect2;Trusted_Connection = True; MultipleActiveResultSets = true"
+},
+"AppSetting": {
+  "Secret": "THIS IS USED TO SIGN AND VERIFY JWT TOKENS, REPLACE IT WITH YOUR OWN SECRET, IT CAN BE ANY STRING"
 }
+
 }
